--- a/css/photoViewer.css
+++ b/css/photoViewer.css
@@ -1,12 +1,15 @@
 #photo-viewer {
   display: none;
 }
+
 #photo-viewer .photo-box {
   position: relative;
   display: block;
   width: 800px;
   height: 450px;
+  margin: 40px;
 }
+
 #photo-viewer .photo-box.is-loading::after {
   content: "Loading...";
   position: absolute;
@@ -15,16 +18,35 @@
   top: calc(50% - 20px);
   left: calc(50% - 50px);
 }
+
 #photo-viewer .photo-box img {
   position: absolute;
-  max-width: 100%;
-  max-height: 100%;
+  width: 800px;
+  height: 450px;
   top: 50%;
   left: 50%;
+  border: 3px solid plum;
+  border-radius: 4px;
+  padding: 5px;
 }
+
+.thumbnail-anchor {
+  text-decoration: none;
+}
+
 #photo-viewer .thumbnail-anchor img {
+  border: 1px solid plum;
+  border-radius: 4px;
+  padding: 3px;
   width: 80px;
   height: 45px;
 }
+
+#photo-viewer .thumbnail-anchor img:hover {
+  box-shadow: 0 0 2px 1px red;
+}
+
 #photo-viewer .thumbnail-anchor img.active {
+  display: table;
+  clear: both;
 }
