--- a/css/style.css
+++ b/css/style.css
@@ -1,100 +1,48 @@
-#london-wrapper, #windsor-wrapper{
-    display: none;
-    height: 500px;
-}
-
-#box-container{
-    position: absolute;
-    left: 40%;
-    top: 15%;
-    width: 30%;
-    padding:20px ;
-    border: 2px solid blue;
-    z-index: 11111;
-    display: none;
-}
-
-#close{
-    float: right;
+#myImg {
+    border-radius: 5px;
     cursor: pointer;
+    transition: 0.3s;
 }
 
-#thumbnails {
-    display: flex;
-    flex-wrap: wrap;
+#myImg:hover {
+    opacity: 0.7;
 }
 
-.photo-box {
-    border: 2px solid transparent;
-}
-
-.active-thumbnail {
-    border: 2px solid #3498db;
-}
-
-
-/*Photo Viewer*/
-#main-image{
-    height: 600px;
-    width: 540px;
-    border: 3px solid grey;
-}
-
-.img-pic{
-    width: 100px;
-    height: 100px;
-    border: 3px solid grey;
-}
-
-#photo-viewer{
-    position: absolute;
-    top: 20%;
-    left: 5%;
-}
-
-/*Slider*/
-.slider-container{
-    position: absolute;
-    width: 640px;
-    height: 400px;
-    margin: 40 auto;
+/* The Modal (background) */
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
     overflow: auto;
-    top: 40%;
-    left: 50%;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.9);
+    /* Black w/ opacity */
 }
 
-.slider-img{
-    position: relative;
-    width: 600px;
-    height: 400px;
-    overflow: hidden;
-    float: left;
-    padding: 3px;
-    border: 2px solid #999;
+/* Modal Content (image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 800px;
+    height: 450px;
 }
 
-.prev, .next{
-    float: left;
-    position: relative;
-    width: 50px;
-    height: 50px;
-    margin-top: 160px;
-    z-index: 100;
+#close {
+    display: block;
+    padding-bottom: 10px;
     cursor: pointer;
-}
 
-.prev{
-    margin-right: -45px;
-}
-.next{
-    margin-left: -45px;
-}
-.slider-img img{
-    display: none;
-    width: 600px;
-    height: 400;
-}
-
-.slider-img img.active{
-    display: inline-block;
 }
