--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 body {
     font-family:'Poppins', sans-serif;
-    background-color: #372941;
+    background-color: #735b84;
     color: #f7eaea; 
     margin: 0;
     padding: 0;
 }
 
 h1 {
-    color: rgb(176, 239, 95); 
+    color: rgb(244, 244, 23); 
 }
 
 .highlight {
