--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family:'Poppins', sans-serif;
-    background-color: rgb(29, 173, 206 119, 141);
+    background-color: rgb(29, 173, 206);
     color: #f7eaea; 
     margin: 0;
     padding: 0;
